# lsmps3D_CPU

./: .gitignore  CMakeLists.txt  vtk_writer_test_output.vtk
cases/dam_break_3d/: README.md  preprocess_dam_break_3d.cpp
cases/hydrostatic_box/: README.md  config.ini  preprocess_hydrostatic_box.cpp
docs/development/: development_plan.md
docs/development/modules/: ALGORITHM_GPU_CN.md  dam_break_stability_research.md  free_surface_detection_design.md  lsmps_type_a_implementation.md  neighbor_search.md  particle_shifting_algorithm_design.md  performance_baseline_hydrostatic_8000.md  pressure_poisson_solver_design.md
docs/theory/: lsmps3D.md  lsmps_scheme.md
src/: main.cpp
src/config/: config_reader.cpp  config_reader.hpp
src/core/: particle_set.cpp  particle_set.hpp  particle_types.hpp  simulation_config.cpp  simulation_config.hpp  simulation_state.hpp  vector3.hpp
src/correction/: correction.cpp  correction.hpp
src/diagnostics/: particle_distribution_diagnostics.cpp  particle_distribution_diagnostics.hpp
src/free_surface/: free_surface_detector.cpp  free_surface_detector.hpp
src/io/: file_manager.cpp  file_manager.hpp  logger.cpp  logger.hpp  particle_file_io.cpp  particle_file_io.hpp  vtk_writer.cpp  vtk_writer.hpp
src/lsmps/: lsmps_basis.cpp  lsmps_basis.hpp  lsmps_matrices.cpp  lsmps_matrices.hpp  weight_function.cpp  weight_function.hpp
src/neighbor/: cell_linked_list.cpp  cell_linked_list.hpp  neighbor_search.cpp  neighbor_search.hpp
src/particle_shifting/: particle_shifter.cpp  particle_shifter.hpp
src/pressure_poisson/: pressure_poisson.cpp  pressure_poisson.hpp
src/provisional/: provisional.cpp  provisional.hpp
src/time_integration/: time_step_controller.cpp  time_step_controller.hpp  time_stepper.cpp  time_stepper.hpp
tests/: config_reader_test.cpp  core_data_test.cpp  correction_test.cpp  file_manager_test.cpp  free_surface_detector_test.cpp  hydrostatic_full_pipeline_test.cpp  lsmps_matrix_test.cpp  lsmps_operator_validation_test.cpp  neighbor_search_large_case_test.cpp  neighbor_search_test.cpp  particle_distribution_diagnostics_test.cpp  particle_file_io_test.cpp  particle_shifter_test.cpp  physics_module_structure_test.cpp  pressure_poisson_test.cpp  provisional_velocity_test.cpp  smoke_test.cpp  time_step_controller_test.cpp  time_stepper_long_hydrostatic_test.cpp  vtk_writer_test.cpp
